Bug 1814677 - Use the decoded image size for SurfacePipe frame rectangle. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D168773